--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -13,6 +13,7 @@
     "d3": "^5.16.0",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
+    "package.json": "^2.0.1",
     "plotly.js": "^1.54.7",
     "plotly.js-basic-dist": "^1.54.1",
     "react": "^16.13.1",
@@ -20,7 +21,7 @@
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
+    "react-scripts": "^3.4.3",
     "react-stockcharts": "^0.7.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
